[EKH-78] refactor: resolve manage booking  flow issues